--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,7 @@
   "useTabs": false,
   "singleQuote": true,
   "trailingComma": "none",
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "multilineArraysWrapThreshold": 3,
+  "plugins": ["prettier-plugin-multiline-arrays"]
 }
