--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -32,8 +32,7 @@
       "@redux": ["./src/redux"],
       "@redux/*": ["./src/redux/*"],
       "@types": ["./src/types"],
-      "@utils/*": ["./src/utils/*"],
-      
+      "@utils/*": ["./src/utils/*"]
     }
   },
   "include": ["src"]
