--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,5 @@
   "singleQuote": true,
   "trailingComma": "none",
   "bracketSpacing": true,
-  "multilineArraysWrapThreshold": 3,
-  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-multiline-arrays"]
+  "plugins": ["prettier-plugin-organize-imports"]
 }
