--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,6 +28,7 @@
       "@assets/*": ["./src/assets/*"],
       "@components": ["./src/components"],
       "@components/*": ["./src/components/*"],
+      "@hooks": ["./src/hooks"],
       "@hooks/*": ["./src/hooks/*"],
       "@redux": ["./src/redux"],
       "@redux/*": ["./src/redux/*"],
